--- a/recent.css
+++ b/recent.css
@@ -342,6 +342,7 @@ address .fa-solid,
         padding: 25px 15px;
         margin-bottom: 10.5rem;
         font-size: 2rem;
+        flex-direction: column;
     }
 
     .first p:nth-child(2),
